# invgen

./: .gitignore  Cargo.toml  dev.db
migrations/2023-11-03-235151_create_users_table/: up.sql
src/: main.rs  schema.rs
src/models/: document_schema.rs  mod.rs  user.rs
src/utils/: mod.rs  pdf_utils.rs
