[package]
name = "rust_invoice_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

printpdf = "0.6.0"
serde = {version = "1.0.167", features = ["derive"]}
serde_json = "1.0.100"
actix-web = "4.3.1"
actix-cors = "0.6.4"
rusttype = "0.9.3"
diesel = {version = "2.1.3", features = ["sqlite","postgres","r2d2","chrono"]}
dotenv = "0.15.0"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
uuid = "1.5.0"
r2d2 = "0.8.10"


[features]
default = []
sqlite = ["diesel/sqlite"]
postgres = ["diesel/postgres"]